<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My application</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Hello world!
    </string>
    <string name="donation_label">Welcome Homer</string>
    <string name="please_give_generously">Please Give Generously</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>

    <string name="amount">Amount</string>
    <string name="donate">Donate</string>
    <string name="total_so_far">Total so far: 1998$</string>
    <string name="linear">Linear</string>

</resources>
