<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relative">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <TextView
                android:id="@+id/textview_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/donation_label"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/please_give_generously"
                android:textColor="@android:color/darker_gray"
                android:layout_below="@id/textview_first" />

            <RadioGroup
                android:layout_width="140dp"
                android:layout_height="93dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/textView">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direct" />
            </RadioGroup>

            <NumberPicker
                android:id="@+id/NumberPicker"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/textView"
                >

            </NumberPicker>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="404dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/NumberPicker"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/amount"
                android:layout_below="@id/progressBar"
                />



            <EditText
                android:layout_width="297dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/textView2"
                android:layout_below="@id/progressBar">

            </EditText>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/donate"
                android:layout_below="@id/textView2"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="218dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/total_so_far"
                android:gravity="center"
                android:layout_below="@id/textView2"
                android:layout_toEndOf="@id/button"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
